--- a/idHash.cls
+++ b/idHash.cls
@@ -28,6 +28,9 @@ Private Declare Sub GetMem2 Lib "msvbvm60" (ByVal addr As Long, retval As Intege
 Private lastfind As String
 Private Hash() As Long
 Public index As Long
+Public lastHashFunc0 As Long
+Private limitGlobal As Long
+Private clean As New mStiva2
 Private Sub Class_Initialize()
     MaxSpace = 10
     ReDim PriveSpace(MaxSpace) As item, Hash(MaxSpace * 2 + 3)
@@ -54,8 +57,9 @@ Private Sub ExpandHash()
 End Sub
 Friend Sub ReduceHash(newTop As Long)
     Dim i As Long
-    
+
     For i = toplim To newTop Step -1
+       
        With PriveSpace(i)
         
     
@@ -119,7 +123,7 @@ Do
     If PriveSpace(k).Key = Key Then
     
     PriveSpace(k).Key = NewKey
-    PriveSpace(k).firsthash = HashFunc0(NewKey)
+    PriveSpace(k).firsthash = HD(NewKey)
                 ReDim Hash(MaxSpace * 2 + 3)
                hashlen = MaxSpace * 2 + 3
              '  reHash...
@@ -169,18 +173,15 @@ Do
     If num > 0 Then
         Find = True: lastfind = Key: index = k: Exit Function
     ElseIf badindex Then
-        If badindex <= k Then Find = True: lastfind = Key: index = k: Exit Function
-    Else
     
-    '    Exit Do
-        
+       If badindex <= k Then Find = True: lastfind = Key: index = k: Exit Function
+       If k >= limitGlobal Then If num < -1 Then Find = True: lastfind = Key: index = k: Exit Function
     End If
     End If
      k = PriveSpace(k).Pleft - 1
 Loop Until k < 0
 End If
 End Function
-
 Friend Function ExistKey(Key As String) As Boolean
 Dim k As Long
 If Len(Key) = 0 Then Exit Function
@@ -193,7 +194,18 @@ Do
 Loop Until k < 0
 End If
 End Function
+Friend Sub ItemCreator2(Key As String, num As Long)
+Dim a As Long
+a = Malloc()
+place HashFuncStored(Key), a
+With PriveSpace(a)
+    .Key = Key
+    .ndx = num
+    .firsthash = HD(Key)
+End With
 
+
+End Sub
 
 Friend Sub ItemCreator(Key As String, num As Long)
 Dim a As Long
@@ -202,7 +214,7 @@ place HashFunc(Key), a
 With PriveSpace(a)
     .Key = Key
     .ndx = num
-    .firsthash = HashFunc0(Key)
+    .firsthash = HD(Key)
 End With
 
 End Sub
@@ -218,54 +230,34 @@ Private Sub place(ByVal b, ByVal a)
     End If
     PriveSpace(a).lastpos = b
 End Sub
-Private Sub ab(ByVal a As Long, b As Long)
-b = (b + a + 1024 * a) Xor &H83F3CF
-End Sub
-Public Function HashFunc0(a$) As Long
-Dim i&, p2 As Long, p1 As Integer, p4 As Long, k As Long, p3 As Long
-  p4 = Len(a$) * 2 '- 2
-  p2 = StrPtr(a$): p4 = p2 + p4 - 2
-   For i = p4 To p4 - 4 Step -2
-  GetMem2 i, p1
-  p3 = UINT(p1)
-  HashFunc0 = (HashFunc0 + p3 + 1024& * p3) Xor &H83F3CF
-  Next i
-  k = 2
-  For i = p4 - 6 To p2 Step -2
-  GetMem2 i, p1
-  p3 = UINT(p1)
-  HashFunc0 = (HashFunc0 + p3 + 1024& * p3) Xor &H83F3CF
- i = i - 2 * k
-  k = k + 1
-  Next i
- 
-End Function
-Private Function UINT(ByVal a As Integer) As Long 'δίνει έναν integer σαν Unsigned integer σε long
- Dim b As Integer
- b = a And &HFFFF
- If b < 0 Then
- UINT = CLng(&H10000 + b)
- Else
- UINT = CLng(b)
- End If
- 
- End Function
+
 Private Function HashFunc2(where As Long)
-HashFunc2 = MyMod(uintnew(PriveSpace(where).firsthash Or &HAFFAFF7 + Len(PriveSpace(where).Key) + hashlen + 1), hashlen)
+HashFunc2 = PriveSpace(where).firsthash Mod hashlen
 End Function
 
 Private Function HashFunc(a$)
-HashFunc = MyMod(uintnew(HashFunc0(a$) Or &HAFFAFF7 + Len(a$) + hashlen + 1), hashlen)
+lastHashFunc0 = HD(a$)
+HashFunc = lastHashFunc0 Mod hashlen
 End Function
-Private Function MyMod(r1, po) As Variant
-MyMod = r1 - Fix(r1 / po) * po
+
+Private Function HashFuncStored(a$)
+HashFuncStored = lastHashFunc0 Mod hashlen
 End Function
-Private Function uintnew(ByVal a As Currency) As Currency
-If a > 2147483647@ Then a = 2147483647@
-If a < -2147483648@ Then a = -2147483648@
-If a < 0 Then
-uintnew = 4294967296@ + a
-Else
-uintnew = a
-End If
-End Function
+
+Public Sub pushtopGlobal()
+clean.PushVal CVar(limitGlobal)
+clean.PushVal CVar(toplim + 1)
+limitGlobal = toplim + 1
+End Sub
+Public Sub poptopGlobal()
+ReduceHash CLng(clean.PopVal)
+limitGlobal = CLng(clean.PopVal)
+ 
+End Sub
+
+Public Sub pushtop()
+clean.PushVal CVar(toplim + 1)
+End Sub
+Public Sub poptop()
+ ReduceHash CLng(clean.PopVal)
+End Sub
